# s-beta

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
f10info/: Cargo.toml
f10info/src/: client.rs  error.rs  lib.rs  main.rs  runner.rs  schema.rs
f10info/src/pages/: cwfx.rs  fhrz.rs  gbjg.rs  gdyj.rs  gsgk.rs  gszx.rs  hyfx.rs  jyds.rs  jyfx.rs  mod.rs  rdtc.rs  ybpj.rs  zbyz.rs  zlcc.rs  zxts.rs
f10info/src/schema/: cwfx.rs  fhrz.rs  gbjg.rs  gdyj.rs  gsgk.rs  gszx.rs  hyfx.rs  jyds.rs  jyfx.rs  rdtc.rs  ybpj.rs  zbyz.rs  zlcc.rs  zxts.rs
outputs/: .gitignore  README.md  companies.json  index.html  package.json  vite.config.js
outputs/TCL科技_000100/: TCL科技_Serenity卡点分析.md  TCL科技_supply_chain_data.json  TCL科技_供应链分析.md  meta.json
outputs/assets/: main-8OXzni8C.js  main-BLPvVl0A.js  main-BrmtKxw3.css  main-CLGDl2LM.js  main-Ccb1UyfU.js  main-CuN3ERvE.js  main-DNhB_mz1.js  main-DZPz74EI.js
outputs/src/: App.css  App.jsx  index.css
outputs/万业企业_600641/: meta.json  万业企业_Serenity卡点分析.md  万业企业_supply_chain_data.json  万业企业_供应链分析.md
outputs/万盛股份_603010/: meta.json  万盛股份_Serenity卡点分析.md  万盛股份_supply_chain_data.json  万盛股份_供应链分析.md
outputs/万通发展_600246/: meta.json  万通发展_Serenity卡点分析.md  万通发展_supply_chain_data.json  万通发展_供应链分析.md
outputs/三佳科技_600520/: meta.json  三佳科技_Serenity卡点分析.md  三佳科技_supply_chain_data.json  三佳科技_供应链分析.md
src/: __init__.py  models.py  visualizer.py
templates/: supply_chain_graph.html  supply_chain_json_template.json  supply_chain_template.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+1261 files in other folders)
