[package]
name = "qbrs-f10info"
version = "0.1.0"
edition = "2021"
description = "通达信 F10 股票基本面数据抓取 — 14 个页面 → ClickHouse"

[[bin]]
name = "qbrs-f10info"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
clickhouse = { version = "0.15.0", features = ["time"] }
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
indicatif = "0.17"
